# chess

./: .clang-format  CMakeLists.txt  README.md  TODO.txt  Zoorbist.cc  install-packages.sh  install_dep.sh  main.cpp  main_console.cpp  requirements.txt  style-guide.md  style.txt  temat projektu.txt
Rozwiazanie zadania/: CMakeLists.txt  install-packages.sh  main.cpp
Rozwiazanie zadania/include/: Common.h  Gui.hpp  Movegen.h  Search.h
Rozwiazanie zadania/src/: Board.cc  CMakeLists.txt  Gui.cc  Movegen.cc  Search.cc
Rozwiazanie zadania/tests/: Board_test.cc  Evaluation_test.cc  MoveContent_test.cc  Piece_test.cc  Search_test.cc
Rozwiazanie zadania/tests/benchmarks/: Movegen_benchmark.cc  Search_benchmark.cc
Rozwiazanie zadania/tests/profiling/: getBestMove_depth2_Ofast_callgrind  getBestMove_depth2_noopt_callgrind  perft.benchmarks.Ofast.txt  perft.benchmarks.noopt.txt
include/: Board.h  Common.h  Engine.h  Evaluation.h  Gui.h  Gui.hpp  Move.h  MoveContent.h  Movegen.h  Piece.h  PieceMoves.h  Search.h  TranspositionTable.h  board.h  board.hpp  gui.hpp  move.hpp  movegen.h  movegen.hpp  piece.hpp
src/: Board.cc  CMakeLists.txt  Engine.cc  Evaluation.cc  Gui.cc  GuiExample.cc  Move.cc  MoveContent.cc  Movegen.cc  Piece.cc  PieceMoves.cc  Search.cc  TranspositionTable.cc  board.cpp  move.cpp  movegen.cpp  piece.cpp
tests/: Board_test.cc  CMakeLists.txt  Evaluation_test.cc  MoveContent_test.cc  Move_test.cc  Movegen_test.cc  PieceMoves_test.cc  Piece_test.cc  Search_test.cc  board_test.cpp  move_test.cpp  piece_test.cpp  tests.cpp
tests/benchmarks/: CMakeLists.txt  Search_benchmark.cc
tests/profiling/: perft.callgrind.txt  perft4.noopt.callgrind  perft5.Ofast.callgrind
